--- a/register/index.html
+++ b/register/index.html
@@ -52,7 +52,7 @@
   </div>
 
   <script>
-    const CHECKIN_PAGE_URL = "https://new-checkin-zeta.vercel.app/checkin/";
+    const CHECKIN_PAGE_URL = "https://6938d75e82b9f81a73096779--ncheck.netlify.app/checkin.html";
 
 function generateQR() {
   const name = document.getElementById("name").value.trim();
